Fix importing duplicated resources that are different with case only

(on case-insensitive filesystems)

BUG:446743